# agentops

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.agents/: .gitignore
.agents/bundles/: learning-system-plan-2025-12-02.md
.agents/council/: 2026-02-05-brainstorm-plugin-improvements.md  2026-02-05-validate-plugin-improvement-plan.md
.agents/crank/: wave-4-checkpoint.json
.agents/handoff/: 2026-02-05-plugin-adoption-prompt.md  2026-02-05-plugin-adoption.md
.agents/learnings/: 2025-12-30-progressive-documentation.md  2026-02-16-approachability-improvements.md  2026-02-16-session-retro-competitive-to-ship.md
.agents/patterns/: progressive-levels.md
.agents/plans/: 2026-02-05-plugin-improvement-plan.md  2026-02-15-v3-roadmap.md
.agents/pre-mortems/: 2026-01-31-devops-for-vibe-coding-pivot.md  2026-02-03-ao-skills-validation.md
.agents/releases/: 2026-02-08-v1.8.0-notes.md  2026-02-10-v2.2.0-notes.md  2026-02-11-v2.3.0-notes.md  2026-02-11-v2.4.0-notes.md  2026-02-12-v2.5.0-notes.md  2026-02-12-v2.5.1-notes.md  2026-02-13-v2.6.0-notes.md  2026-02-13-v2.7.0-notes.md  2026-02-14-v2.7.1-notes.md  2026-02-15-v2.8.0-notes.md  2026-02-16-v2.9.0-notes.md  2026-02-16-v2.9.1-notes.md  2026-02-16-v2.9.2-notes.md  2026-02-16-v2.9.3-notes.md  2026-02-17-v2.10.0-notes.md  2026-02-18-v2.11.0-audit.md  2026-02-18-v2.11.0-notes.md
.agents/reports/: 2025-12-30-skills-profiles-audit.md
.agents/research/: 2026-02-15-vibe-check-detectors-metrics.md  (+1 more)
.claude-plugin/: marketplace.json
tests/: validate_marketplace.py  validate_plugins.py
(+57 files in other folders)
