[project]
name = "agentops"
version = "0.1.0"
description = "AgentOps learning repository with marketplace and plugin validation"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[dependency-groups]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]
